# AI-Engi

./: README.md  update.bat
hello-service/: TODO.md  pyproject.toml
hello-service/app/: logging.py  main.py
hello-service/hello_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hello-service/tests/: test_health.py  test_version_contract.py
