[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-service"
version = "0.1.0"
description = "A minimal Hello-Service using FastAPI with structured logging"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "loguru",
    "pytest",
    "httpx"  # For async tests if needed
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
